# typ2anki

./: .gitignore  README.md  bundle-ankiaddon.sh  flake.nix  setup.py
.github/workflows/: publish-cargo.yml  release.yml
ankiaddon/: __init__.py  detect_backend.py  pyproject.toml  run.sh  typ2anki.py  typ2anki_cli
examples/: ankiconf.typ  main.typ
src/: lib.typ
typ2anki/: ankiconf.typ  api.py  card_wrapper.py  cardscache.py  config.py  generator.py  get_data.py  main.py  parse.py  process.py  progressbar.py  utils.py
typ2anki-rust/: .gitignore  .goreleaser.yaml  Cargo.toml  releaser-before.sh  releaser-strip.sh
typ2anki-rust/src/: anki_api.rs  card_wrapper.rs  cards_cache.rs  compile.rs  config.rs  generator.rs  main.rs  output.rs  output_console.rs  parse_file.rs  typst_as_library.rs  utils.rs
typst2anki/: generator.py  get_data.py  main.py  parse.py
