[package]
name = "typ2anki"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
md5 = "0.8.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"

clap = { version = "4", features = ["derive"] }
glob = "0.3"
html-escape = "0.2"
once_cell = "1.20"
pathdiff = "0.2.3"
time = "0.3.44"
toml = "0.7"

tar = "0.4.44"

# Typst
typst = "0.14.0"
typst-kit = { version = "0.14.0", features = ["embed-fonts"] }
typst-render = "0.14.0"

codespan-reporting = "0.13.1"
num_cpus = "1.17.0"
walkdir = "2.5.0"
zune-inflate = { version = "0.2.54", default-features = false, features = ["gzip", "std"] }
