[package]
name = "typ2anki"
version = "1.0.6"
categories = ["visualization"]
edition = "2024"
homepage = "https://github.com/sgomezsal/typ2anki"
keywords = ["typst", "anki", "flashcards", "education", "productivity"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/sgomezsal/typ2anki"
description = "Compile Typst flashcards into Anki decks"

exclude = [
    "target/",
    "goreleaser--dist/",
    ".goreleaser.yaml",
    "typ2anki.ankiaddon",
]

[[bin]]
name = "typ2anki"
path = "src/main.rs"

# Binstall configuration
[package.metadata.binstall]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"

[dependencies]
base64 = "0.22.1"
md5 = "0.8.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.145"

clap = { version = "4", features = ["derive"] }
glob = "0.3"
html-escape = "0.2"
once_cell = "1.20"
pathdiff = "0.2.3"
time = "0.3.44"
toml = "0.7"

tar = "0.4.44"

# Typst
typst = "0.14.1"
typst-kit = { version = "0.14.1", default-features = false, features = ["embed-fonts"] }
typst-render = "0.14.1"

codespan-reporting = "0.13.1"
colored = "3.0.0"
indicatif = "0.18.3"
num_cpus = "1.17.0"
tempfile = "3.23.0"
tree-sitter = { version = "~0.20.10", optional = true }
tree-sitter-typst = { git = "https://github.com/uben0/tree-sitter-typst", tag = "v0.11.0", optional = true }
walkdir = "2.5.0"
zip = "6.0.0"
zune-inflate = { version = "0.2.54", default-features = false, features = ["gzip", "std"] }

[features]
default = []
tree-sitter = ["dep:tree-sitter", "dep:tree-sitter-typst"]
